<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigation_drawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.navigation_drawer.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.navigation_drawer.ui.category.N.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />



    <fragment
        android:id="@+id/nav_time"
        android:name="com.example.navigation_drawer.ui.time.TimeFragment"
        android:label="@string/menu_time"
        tools:layout="@layout/fragment_time"
        />

    <fragment
        android:id="@+id/nav_policy"
        android:name="com.example.navigation_drawer.ui.policy.N.PolicyFragment"
        android:label="@string/menu_policy"
        tools:layout="@layout/fragment_policy"
        />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.navigation_drawer.ui.share.N.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share"
        />

    <fragment
        android:id="@+id/nav_rate"
        android:name="com.example.navigation_drawer.ui.rate.N.RateFragment"
        android:label="@string/menu_rate"
        tools:layout="@layout/fragment_rate"
        />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.navigation_drawer.ui.login_out.N.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout"
        />







</navigation>