<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    tools:context=".ui.category.N.CategoryFragment">

    <TextView
    android:id="@+id/text_category"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:textSize="20sp"
    android:textColor="@android:color/transparent"
     />

    <Button
        android:id="@+id/button"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:background="@drawable/buttonbackground"
        android:text="@string/Button1"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-medium"
        android:textStyle="italic"

        />

    <Button
        android:id="@+id/button2"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="142dp"
        android:layout_marginLeft="142dp"
        android:layout_marginTop="355dp"
        android:background="@drawable/buttonbackground"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Button2"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button3"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginBottom="164dp"
        android:background="@drawable/buttonbackground"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Button3"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"


        />


</RelativeLayout>